@@ -24,6 +24,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #8117: logging: Improved algorithm for computing initial rollover time.
+
 - Issue #6472: The xml.etree package is updated to ElementTree 1.3.  The
   cElementTree module is updated too.
 
